--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@angular/router": "^18.2.0",
     "@daypilot/daypilot-lite-angular": "^3.32.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
     "echarts": "^5.6.0",
+    "jquery": "^3.7.1",
     "ng2-charts": "^7.0.0",
     "ngx-echarts": "^19.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
