--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.2.0",
     "@daypilot/daypilot-lite-angular": "^3.32.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
